--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -213,7 +213,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_197sdp"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_18sdp"
                 android:layout_marginRight="@dimen/_10sdp"
@@ -431,7 +431,7 @@
                     <TextView
                         android:id="@+id/etRemarks"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_44sdp"
+                        android:layout_height="@dimen/_50sdp"
                         android:layout_marginLeft="@dimen/_15sdp"
                         android:layout_marginTop="@dimen/_19sdp"
                         android:layout_marginRight="@dimen/_15sdp"
@@ -440,7 +440,7 @@
                         android:hint="Optional: Add Note (Maximum 120 characters )"
                         android:textColor="@color/primary_black"
                         android:textColorHint="@color/light_gray"
-                        android:textSize="@dimen/_10ssp"></TextView>
+                        android:textSize="@dimen/_10ssp"/>
 
                 </LinearLayout>
 
