--- a/app/src/main/res/layout/profileqrcode.xml
+++ b/app/src/main/res/layout/profileqrcode.xml
@@ -101,6 +101,9 @@
                         android:layout_below="@+id/profile"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="10dp"
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_marginEnd="@dimen/_20sdp"
+                        android:textAlignment="center"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_13ssp" />
