--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -1239,6 +1239,7 @@
                                     android:orientation="vertical">
 
                                     <TextView
+                                        android:id="@+id/nextReleaseTV"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="@dimen/_21sdp"
@@ -1253,6 +1254,7 @@
                                         android:orientation="horizontal">
 
                                         <TextView
+                                            android:id="@+id/nextReleaseAmountTV"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_3sdp"
@@ -1274,6 +1276,7 @@
                                     </LinearLayout>
 
                                     <TextView
+                                        android:id="@+id/nextReleaseDateTV"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/opensans_regular"
@@ -1291,6 +1294,7 @@
                                     android:orientation="vertical">
 
                                     <TextView
+                                        android:id="@+id/lastReleaseTV"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="@dimen/_21sdp"
@@ -1305,6 +1309,7 @@
                                         android:orientation="horizontal">
 
                                         <TextView
+                                            android:id="@+id/lastReleaseAmountTV"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_3sdp"
@@ -1325,6 +1330,7 @@
                                     </LinearLayout>
 
                                     <TextView
+                                        android:id="@+id/lastReleaseDateTV"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/opensans_regular"
@@ -1337,248 +1343,15 @@
 
 
                             <LinearLayout
+                                android:id="@+id/reserveReleaseListLL"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_11sdp"
-                                android:orientation="horizontal">
+                                android:layout_marginStart="@dimen/_11sdp"
+                                android:layout_marginEnd="@dimen/_11sdp"
+                                android:orientation="vertical">
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/opensans_semibold"
-                                    android:text="06/23/2021"
-                                    android:textColor="@color/dark_grey"
-                                    android:textSize="@dimen/_10ssp" />
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:gravity="right"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_bold"
-                                        android:text="120.00"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_11ssp" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_semibold"
-                                        android:text="@string/currency"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_8ssp" />
-                                </LinearLayout>
                             </LinearLayout>
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_7sdp"
-                                android:background="@color/blue_light" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_7sdp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/opensans_semibold"
-                                    android:text="06/23/2021"
-                                    android:textColor="@color/dark_grey"
-                                    android:textSize="@dimen/_10ssp" />
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:gravity="right"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_bold"
-                                        android:text="452.00"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_11ssp" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_semibold"
-                                        android:text="@string/currency"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_8ssp" />
-                                </LinearLayout>
-                            </LinearLayout>
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_7sdp"
-                                android:background="@color/blue_light" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_7sdp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/opensans_semibold"
-                                    android:text="06/23/2021"
-                                    android:textColor="@color/dark_grey"
-                                    android:textSize="@dimen/_10ssp" />
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:gravity="right"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_bold"
-                                        android:text="120.00"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_11ssp" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_semibold"
-                                        android:text="@string/currency"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_8ssp" />
-                                </LinearLayout>
-                            </LinearLayout>
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_7sdp"
-                                android:background="@color/blue_light" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_7sdp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/opensans_semibold"
-                                    android:text="06/23/2021"
-                                    android:textColor="@color/dark_grey"
-                                    android:textSize="@dimen/_10ssp" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="@dimen/_5sdp"
-                                    android:fontFamily="@font/opensans_regular"
-                                    android:text="@string/manual"
-                                    android:textColor="@color/primary_green"
-                                    android:textSize="@dimen/_10ssp" />
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:gravity="right"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_bold"
-                                        android:text="120.00"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_11ssp" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_semibold"
-                                        android:text="@string/currency"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_8ssp" />
-                                </LinearLayout>
-                            </LinearLayout>
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_7sdp"
-                                android:background="@color/blue_light" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_7sdp"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/opensans_semibold"
-                                    android:text="06/23/2021"
-                                    android:textColor="@color/dark_grey"
-                                    android:textSize="@dimen/_10ssp" />
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:gravity="right"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_bold"
-                                        android:text="120.00"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_11ssp" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_semibold"
-                                        android:text="@string/currency"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_8ssp" />
-                                </LinearLayout>
-                            </LinearLayout>
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_7sdp"
-                                android:background="@color/blue_light" />
 
                             <TextView
                                 android:id="@+id/tv_reserve_list"
