--- a/app/src/main/res/layout/activity_reserve_releases.xml
+++ b/app/src/main/res/layout/activity_reserve_releases.xml
@@ -93,8 +93,8 @@
                         android:id="@+id/viewV"
                         android:layout_width="@dimen/_1sdp"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/_6sdp"
                         android:layout_marginHorizontal="@dimen/_11sdp"
+                        android:layout_marginTop="@dimen/_6sdp"
                         android:layout_marginBottom="@dimen/_6sdp"
                         android:background="@color/dark_color_bg" />
 
@@ -109,18 +109,22 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refreshLayoutRL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/reserveNestedSV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="none">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -178,149 +182,62 @@
                             android:id="@+id/rvRollingList"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:scrollbars="none"
-                            android:nestedScrollingEnabled="false"
-                            android:background="@color/white"
                             android:layout_marginBottom="@dimen/_20sdp"
+                            android:background="@color/white"
+                            android:nestedScrollingEnabled="false"
+                            android:scrollbars="none"
                             android:visibility="visible">
 
                         </androidx.recyclerview.widget.RecyclerView>
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rvManualList"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:scrollbars="none"
-                            android:nestedScrollingEnabled="false"
-                            android:background="@color/white"
-                            android:layout_marginBottom="@dimen/_20sdp"
-                            android:visibility="gone" />
-<!--                        <LinearLayout-->
-<!--                            android:id="@+id/llManualList"-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:orientation="vertical"-->
-<!--                            android:visibility="gone">-->
-<!--                            <LinearLayout-->
-<!--                                android:layout_width="match_parent"-->
-<!--                                android:layout_height="match_parent"-->
-<!--                                android:orientation="horizontal">-->
-
-<!--                                <TextView-->
-<!--                                    android:layout_width="match_parent"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:fontFamily="@font/opensans_regular"-->
-<!--                                    android:text="@string/reason_field"-->
-<!--                                    android:textColor="@color/primary_black"-->
-<!--                                    android:layout_weight="1"-->
-<!--                                    android:textSize="@dimen/_11ssp" />-->
-
-<!--                                <TextView-->
-<!--                                    android:layout_width="@dimen/_72sdp"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:fontFamily="@font/opensans_bold"-->
-<!--                                    android:text="10,000.00"-->
-<!--                                    android:gravity="end"-->
-<!--                                    android:singleLine="true"-->
-<!--                                    android:textColor="@color/active_green"-->
-<!--                                    android:textSize="@dimen/_12ssp" />-->
-<!--                            </LinearLayout>-->
-
-<!--                            <LinearLayout-->
-<!--                                android:layout_width="match_parent"-->
-<!--                                android:layout_height="match_parent"-->
-<!--                                android:layout_marginTop="@dimen/_13sdp"-->
-<!--                                android:orientation="horizontal">-->
-
-<!--                                <TextView-->
-<!--                                    android:layout_width="match_parent"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:layout_weight="1"-->
-<!--                                    android:fontFamily="@font/opensans_semibold"-->
-<!--                                    android:text="@string/business_token_account"-->
-<!--                                    android:textColor="@color/xdark_gray"-->
-<!--                                    android:textSize="@dimen/_9ssp" />-->
-
-<!--                                <TextView-->
-<!--                                    android:layout_width="match_parent"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:layout_weight="1"-->
-<!--                                    android:text="06/23/2021 @ 2:20am"-->
-<!--                                    android:fontFamily="@font/opensans_semibold"-->
-<!--                                    android:gravity="end"-->
-<!--                                    android:textColor="@color/xdark_gray"-->
-<!--                                    android:textSize="@dimen/_9ssp" />-->
-<!--                            </LinearLayout>-->
-<!--                            <View-->
-<!--                                android:layout_width="match_parent"-->
-<!--                                android:layout_height="1dp"-->
-<!--                                android:layout_gravity="center"-->
-<!--                                android:layout_marginTop="@dimen/_10sdp"-->
-<!--                                android:layout_marginBottom="@dimen/_9sdp"-->
-<!--                                android:background="@color/primary_light_gray" />-->
-<!--                            -->
-<!--                            <LinearLayout-->
-<!--                                android:layout_width="match_parent"-->
-<!--                                android:layout_height="match_parent"-->
-<!--                                android:orientation="horizontal">-->
-
-<!--                                <TextView-->
-<!--                                    android:layout_width="match_parent"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:layout_marginBottom="@dimen/_11sdp"-->
-<!--                                    android:fontFamily="@font/opensans_regular"-->
-<!--                                    android:text="@string/reason_field_on_the_manual_release_flow"-->
-<!--                                    android:textColor="@color/primary_black"-->
-<!--                                    android:layout_weight="1"-->
-<!--                                    android:textSize="@dimen/_11ssp" />-->
-
-<!--                                <TextView-->
-<!--                                    android:layout_width="@dimen/_72sdp"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:text="10,000.00"-->
-<!--                                    android:fontFamily="@font/opensans_bold"-->
-<!--                                    android:gravity="end"-->
-<!--                                    android:singleLine="true"-->
-<!--                                    android:textColor="@color/active_green"-->
-<!--                                    android:textSize="@dimen/_12ssp" />-->
-<!--                            </LinearLayout>-->
-
-<!--                            <LinearLayout-->
-<!--                                android:layout_width="match_parent"-->
-<!--                                android:layout_height="match_parent"-->
-<!--                                android:orientation="horizontal">-->
-
-<!--                                <TextView-->
-<!--                                    android:layout_width="match_parent"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:layout_weight="1"-->
-<!--                                    android:fontFamily="@font/opensans_semibold"-->
-<!--                                    android:text="@string/business_token_account"-->
-<!--                                    android:textColor="@color/xdark_gray"-->
-<!--                                    android:textSize="@dimen/_9ssp" />-->
-
-<!--                                <TextView-->
-<!--                                    android:layout_width="match_parent"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:layout_weight="1"-->
-<!--                                    android:text="06/23/2021 @ 2:20am"-->
-<!--                                    android:fontFamily="@font/opensans_semibold"-->
-<!--                                    android:gravity="end"-->
-<!--                                    android:textColor="@color/xdark_gray"-->
-<!--                                    android:textSize="@dimen/_9ssp" />-->
-<!--                            </LinearLayout>-->
-<!--                            <View-->
-<!--                                android:layout_width="match_parent"-->
-<!--                                android:layout_height="1dp"-->
-<!--                                android:layout_gravity="center"-->
-<!--                                android:layout_marginTop="@dimen/_10sdp"-->
-<!--                                android:layout_marginBottom="@dimen/_9sdp"-->
-<!--                                android:background="@color/primary_light_gray" />-->
-
-<!--                        </LinearLayout>-->
 
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/noTransactionsTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/opensans_regular"
+                    android:gravity="center"
+                    android:text="@string/you_have_no_transactions"
+                    android:textColor="@color/dark_grey"
+                    android:textSize="@dimen/_10ssp"
+                    android:visibility="gone" />
+
+                <ProgressBar
+                    android:id="@+id/progressBarLoadMoreTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/loadMoreTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:gravity="center"
+                    android:text="@string/load_more"
+                    android:textColor="@color/primary_green"
+                    android:textSize="@dimen/_10ssp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/noMoreTransactionsTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:gravity="center"
+                    android:text="@string/you_have_no_more_transactions"
+                    android:textColor="@color/dark_grey"
+                    android:textSize="@dimen/_10ssp"
+                    android:visibility="gone" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_30sdp" />
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
