changes in dashboard reserve

--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -966,7 +966,7 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_3sdp"
                                             android:fontFamily="@font/opensans_bold"
-                                            android:text="0.00"
+                                            android:text=""
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_20ssp" />
 
@@ -994,7 +994,7 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginBottom="@dimen/_14sdp"
                                             android:fontFamily="@font/opensans_regular"
-                                            android:text="06/24/2021"
+                                            android:text=""
                                             android:layout_marginStart="@dimen/_5sdp"
                                             android:textColor="@color/dark_grey"
                                             android:textSize="@dimen/_10ssp" />
@@ -1060,7 +1060,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginBottom="@dimen/_14sdp"
                                         android:fontFamily="@font/opensans_regular"
-                                        android:text="06/23/2021 @ 11:59pm"
+                                        android:text=""
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_10ssp" />
                                 </LinearLayout>
@@ -1259,7 +1259,7 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_3sdp"
                                             android:fontFamily="@font/opensans_bold"
-                                            android:text="120.43"
+                                            android:text=""
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_20ssp" />
 
@@ -1280,7 +1280,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/opensans_regular"
-                                        android:text="06/24/2021"
+                                        android:text=""
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_10ssp" />
                                 </LinearLayout>
@@ -1314,7 +1314,7 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_3sdp"
                                             android:fontFamily="@font/opensans_bold"
-                                            android:text="230.89"
+                                            android:text=""
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_20ssp" />
 
@@ -1334,7 +1334,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/opensans_regular"
-                                        android:text="06/23/2021"
+                                        android:text=""
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_10ssp" />
                                 </LinearLayout>
