--- a/app/src/main/res/layout/batch_payouts_dashboard.xml
+++ b/app/src/main/res/layout/batch_payouts_dashboard.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_semibold"
-                android:text="06/23/2021 @ 2:20am"
+                android:text=""
                 android:textColor="@color/dark_grey"
                 android:textSize="@dimen/_10ssp" />
 
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="76,000.00"
+                    android:text=""
                     android:textColor="@color/primary_black"
                     android:layout_marginEnd="@dimen/_2sdp"
                     android:textSize="@dimen/_11ssp" />
