--- a/app/src/main/res/layout/dashboard_reserve_release_list.xml
+++ b/app/src/main/res/layout/dashboard_reserve_release_list.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_semibold"
-            android:text="06/23/2021"
+            android:text=""
             android:textColor="@color/dark_grey"
             android:textSize="@dimen/_10ssp" />
 
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_bold"
-                android:text="120.00"
+                android:text=""
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp" />
 
