--- a/app/src/main/res/layout/buy_token_transaction_in_progress.xml
+++ b/app/src/main/res/layout/buy_token_transaction_in_progress.xml
@@ -71,7 +71,7 @@
                 android:layout_marginTop="@dimen/_12sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:gravity="center"
-                android:text="This total amount of [Amount] will appear on your\nBank statement as {description}."
+                android:text="This total amount of [Amount] will appear on your\nbank statement as {description}."
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp" />
 
