--- a/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
@@ -80,21 +80,36 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_3sdp"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="@string/id"
+                        android:text=""
                         android:textAlignment="center"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp" />
 
-                    <TextView
-                        android:id="@+id/payoutIDAmountTV"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_11sdp"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="@string/cyn_no_6435_21"
-                        android:textAlignment="center"
-                        android:textColor="@color/active_green"
-                        android:textSize="@dimen/_16ssp" />
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginTop="@dimen/_10sdp">
+
+                        <TextView
+                            android:id="@+id/payoutIDAmountTV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_bold"
+                            android:textColor="@color/active_green"
+                            android:textSize="@dimen/_16ssp" />
+
+                        <TextView
+                            android:id="@+id/cynTV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_bold"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:text="CYN"
+                            android:textColor="@color/active_green"
+                            android:textSize="@dimen/_16ssp" />
+                    </LinearLayout>
 
                     <View
                         android:layout_width="match_parent"
@@ -116,9 +131,9 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/status"
-                            android:layout_weight="1"
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_11ssp" />
 
@@ -129,8 +144,8 @@
                             android:layout_height="@dimen/_14sdp"
                             android:background="@drawable/txn_completed_bg"
                             android:fontFamily="@font/opensans_bold"
-                            android:text="Paid"
                             android:gravity="center"
+                            android:text=""
                             android:textColor="@color/active_green"
                             android:textSize="@dimen/_7sdp" />
 
@@ -159,7 +174,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="@string/date_time"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
                     </LinearLayout>
@@ -188,24 +203,26 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/payoutRefIdTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:text="@string/snd_no"
-                            android:textColor="@color/primary_green"
-                            android:textSize="@dimen/_11ssp" />
 
-                        <ImageView
-                            android:layout_width="@dimen/_10sdp"
-                            android:layout_height="@dimen/_11sdp"
-                            android:layout_marginLeft="@dimen/_6sdp"
-                            android:layout_marginTop="@dimen/_2sdp"
-                            android:contentDescription="@string/reserve_id"
-                            android:src="@drawable/ic_copy_active" />
+                            <TextView
+                                android:id="@+id/payoutRefIdTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:text=""
+                                android:textColor="@color/primary_green"
+                                android:textSize="@dimen/_11ssp" />
+
+                            <ImageView
+                                android:layout_width="@dimen/_10sdp"
+                                android:layout_height="@dimen/_11sdp"
+                                android:layout_marginLeft="@dimen/_6sdp"
+                                android:layout_marginTop="@dimen/_2sdp"
+                                android:contentDescription="@string/reserve_id"
+                                android:src="@drawable/ic_copy_active" />
+                        </LinearLayout>
                     </LinearLayout>
-                    </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -223,39 +240,41 @@
                             android:text="@string/to_token_account"
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_11ssp" />
+
                         <LinearLayout
                             android:id="@+id/payoutTokenNoLL"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/payoutTokenIdTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:text="@string/as28027281"
-                            android:textColor="@color/primary_green"
-                            android:textSize="@dimen/_11ssp" />
 
-                        <ImageView
-                            android:layout_width="@dimen/_10sdp"
-                            android:layout_height="@dimen/_11sdp"
-                            android:layout_marginLeft="@dimen/_6sdp"
-                            android:layout_marginTop="@dimen/_2sdp"
-                            android:src="@drawable/ic_copy_active" />
-                    </LinearLayout>
+                            <TextView
+                                android:id="@+id/payoutTokenIdTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:text=""
+                                android:textColor="@color/primary_green"
+                                android:textSize="@dimen/_11ssp" />
+
+                            <ImageView
+                                android:layout_width="@dimen/_10sdp"
+                                android:layout_height="@dimen/_11sdp"
+                                android:layout_marginLeft="@dimen/_6sdp"
+                                android:layout_marginTop="@dimen/_2sdp"
+                                android:src="@drawable/ic_copy_active" />
+                        </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/reserveReleaseIDLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_2sdp"
                         android:orientation="horizontal"
                         android:paddingHorizontal="@dimen/_11sdp"
                         android:paddingTop="@dimen/_7sdp"
-                        android:paddingBottom="@dimen/_10sdp"
-                        android:visibility="gone">
+                        android:paddingBottom="@dimen/_10sdp">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -265,6 +284,7 @@
                             android:text="@string/reserve_id"
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_11ssp" />
+
                         <LinearLayout
                             android:id="@+id/payoutReserveIdLL"
                             android:layout_width="wrap_content"
@@ -273,23 +293,22 @@
                             android:orientation="horizontal">
 
 
-                        <TextView
-                            android:id="@+id/ReserveIdTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:text="@string/_78dfbwaebfih"
-                            android:textColor="@color/primary_green"
-                            android:textSize="@dimen/_11ssp" />
+                            <TextView
+                                android:id="@+id/ReserveIdTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:textColor="@color/primary_green"
+                                android:textSize="@dimen/_11ssp" />
 
-                        <ImageView
-                            android:layout_width="@dimen/_10sdp"
-                            android:layout_height="@dimen/_11sdp"
-                            android:layout_marginLeft="@dimen/_6sdp"
-                            android:layout_marginTop="@dimen/_2sdp"
-                            android:contentDescription="@string/reserve_id"
-                            android:src="@drawable/ic_copy_active" />
-                    </LinearLayout>
+                            <ImageView
+                                android:layout_width="@dimen/_10sdp"
+                                android:layout_height="@dimen/_11sdp"
+                                android:layout_marginLeft="@dimen/_6sdp"
+                                android:layout_marginTop="@dimen/_2sdp"
+                                android:contentDescription="@string/reserve_id"
+                                android:src="@drawable/ic_copy_active" />
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -297,16 +316,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginHorizontal="@dimen/_11sdp">
+                android:layout_marginHorizontal="@dimen/_11sdp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/recentTransactionsTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_12sdp"
                     android:layout_marginTop="@dimen/_11sdp"
                     android:layout_weight="1"
-                    android:layout_marginStart="@dimen/_12sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:text="@string/recent_transactions"
                     android:textColor="@color/primary_black"
@@ -315,12 +334,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginTop="@dimen/_11sdp"
                     android:layout_marginRight="@dimen/_12sdp"
+                    android:layout_weight="1"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="@string/cyn"
                     android:gravity="right"
+                    android:text="@string/cyn"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_9ssp" />
             </LinearLayout>
@@ -418,8 +437,7 @@
                             android:id="@+id/progressBarLoadMore"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:visibility="gone"
-                            />
+                            android:visibility="gone" />
                     </LinearLayout>
                 </androidx.core.widget.NestedScrollView>
             </androidx.cardview.widget.CardView>
